fixed z-index of progress bar when verifying; fixed verifying progress bar for SB drafts

--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -97,6 +97,7 @@
 }
 
 .schedule-draft-item {
+    z-index: 0;
     position: relative;
     height: 38px;
     max-height: 38px;
